--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 version: "3.4"
 services:
   openethereum.dnp.dappnode.eth:
-    build: ./build
+    build:
+      context: ./build
+      args:
+        UPSTREAM_VERSION: v3.1.0
     image: "openethereum.dnp.dappnode.eth:1.0.1"
     restart: always
     volumes:
