--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       args:
         UPSTREAM_VERSION: v3.1.0
     image: "openethereum.dnp.dappnode.eth:1.0.1"
-    restart: always
+    restart: unless-stopped
     volumes:
       - "data:/root/.local/share/openethereum"
     environment:
